Transistor.cydsn/REBUILD.log
--------------- Rebuild Started: 02/04/2026 17:21:59 Project: Transistor, Configuration: ARM GCC 5.4-2016-q2-update Debug ---------------
Deleting file ".\CortexM0\ARM_GCC_541\Debug\main.o"
Deleting file ".\CortexM0\ARM_GCC_541\Debug\debug.o"
Deleting file ".\CortexM0\ARM_GCC_541\Debug\Impedance.o"
Deleting file ".\CortexM0\ARM_GCC_541\Debug\ad5940.o"
Deleting file ".\CortexM0\ARM_GCC_541\Debug\Amperometric.o"
Deleting file ".\CortexM0\ARM_GCC_541\Debug\biosensor_ble.o"
Deleting file ".\CortexM0\ARM_GCC_541\Debug\ad5941_platform.o"
Deleting file ".\CortexM0\ARM_GCC_541\Debug\cyfitter_cfg.o"
Deleting file ".\CortexM0\ARM_GCC_541\Debug\cymetadata.o"
Deleting file ".\CortexM0\ARM_GCC_541\Debug\CYBLE.o"
Deleting file ".\CortexM0\ARM_GCC_541\Debug\CYBLE_gatt.o"
Deleting file ".\CortexM0\ARM_GCC_541\Debug\CYBLE_eventHandler.o"
Deleting file ".\CortexM0\ARM_GCC_541\Debug\CYBLE_HAL_INT.o"
Deleting file ".\CortexM0\ARM_GCC_541\Debug\CYBLE_HAL_PVT.o"
Deleting file ".\CortexM0\ARM_GCC_541\Debug\CYBLE_custom.o"
Deleting file ".\CortexM0\ARM_GCC_541\Debug\Disconnect_LED.o"
Deleting file ".\CortexM0\ARM_GCC_541\Debug\Disconnect_LED_PM.o"
Deleting file ".\CortexM0\ARM_GCC_541\Debug\AD5940_CS.o"
Deleting file ".\CortexM0\ARM_GCC_541\Debug\AD5940_CS_PM.o"
Deleting file ".\CortexM0\ARM_GCC_541\Debug\AD5940_EXTI.o"
Deleting file ".\CortexM0\ARM_GCC_541\Debug\AD5940_EXTI_PM.o"
Deleting file ".\CortexM0\ARM_GCC_541\Debug\AD5940_Interrupt.o"
Deleting file ".\CortexM0\ARM_GCC_541\Debug\AD5940_MISO.o"
Deleting file ".\CortexM0\ARM_GCC_541\Debug\AD5940_MISO_PM.o"
Deleting file ".\CortexM0\ARM_GCC_541\Debug\AD5940_SCLK.o"
Deleting file ".\CortexM0\ARM_GCC_541\Debug\AD5940_SCLK_PM.o"
Deleting file ".\CortexM0\ARM_GCC_541\Debug\AD5940_MOSI.o"
Deleting file ".\CortexM0\ARM_GCC_541\Debug\AD5940_MOSI_PM.o"
Deleting file ".\CortexM0\ARM_GCC_541\Debug\Advertising_LED.o"
Deleting file ".\CortexM0\ARM_GCC_541\Debug\Advertising_LED_PM.o"
Deleting file ".\CortexM0\ARM_GCC_541\Debug\DRUG_EN_1.o"
Deleting file ".\CortexM0\ARM_GCC_541\Debug\DRUG_EN_1_PM.o"
Deleting file ".\CortexM0\ARM_GCC_541\Debug\STIM_EN_A.o"
Deleting file ".\CortexM0\ARM_GCC_541\Debug\STIM_EN_A_PM.o"
Deleting file ".\CortexM0\ARM_GCC_541\Debug\AD5940_RST.o"
Deleting file ".\CortexM0\ARM_GCC_541\Debug\AD5940_RST_PM.o"
Deleting file ".\CortexM0\ARM_GCC_541\Debug\AMP1_EN.o"
Deleting file ".\CortexM0\ARM_GCC_541\Debug\AMP1_EN_PM.o"
Deleting file ".\CortexM0\ARM_GCC_541\Debug\AMP2_EN.o"
Deleting file ".\CortexM0\ARM_GCC_541\Debug\AMP2_EN_PM.o"
Deleting file ".\CortexM0\ARM_GCC_541\Debug\AMP3_EN.o"
Deleting file ".\CortexM0\ARM_GCC_541\Debug\AMP3_EN_PM.o"
Deleting file ".\CortexM0\ARM_GCC_541\Debug\CYBLE_bless_isr.o"
Deleting file ".\CortexM0\ARM_GCC_541\Debug\Cm0Start.o"
Deleting file ".\CortexM0\ARM_GCC_541\Debug\CyFlash.o"
Deleting file ".\CortexM0\ARM_GCC_541\Debug\CyLib.o"
Deleting file ".\CortexM0\ARM_GCC_541\Debug\cyPm.o"
Deleting file ".\CortexM0\ARM_GCC_541\Debug\cyutils.o"
Deleting file ".\CortexM0\ARM_GCC_541\Debug\CyBootAsmGnu.o"
Deleting file ".\CortexM0\ARM_GCC_541\Debug\CyDMA.o"
Deleting file ".\CortexM0\ARM_GCC_541\Debug\CyLFClk.o"
Deleting file ".\CortexM0\ARM_GCC_541\Debug\cy_em_eeprom.o"
Deleting file ".\CortexM0\ARM_GCC_541\Debug\Transistor.hex"
Deleting file ".\CortexM0\ARM_GCC_541\Debug\Transistor.elf"
Deleting file ".\CortexM0\ARM_GCC_541\Debug\Transistor.map"
Deleting file ".\Transistor.cycdx"
Deleting file ".\Transistor.rpt"
Deleting file ".\Transistor_timing.html"
Deleting file ".\CortexM0\ARM_GCC_541\Debug\.deps\SOURCE_C__ARM_GCC_GENERIC.P"
Deleting file ".\CortexM0\ARM_GCC_541\Debug\.deps\SOURCE_ASM__ARM_GCC_GENERIC.P"
cydsfit.exe -.appdatapath "C:\Users\13740\AppData\Local\Cypress Semiconductor\PSoC Creator\4.4" -.fdsnotice -.fdswarpdepfile=warp_dependencies.txt -.fdselabdepfile=elab_dependencies.txt -.fdsbldfile=generated_files.txt -.fdsreffile=referenced_files.txt -p E:\desktop\bu\eda\Transistor1-4414\Transistor.cydsn\Transistor.cyprj -d CYBLE-222014-01 -s E:\desktop\bu\eda\Transistor1-4414\Transistor.cydsn\Generated_Source\PSoC4 -- -yv2 -q10 -ygs -o2 -v3 -.fftcfgtype=LE
Elaborating Design...
HDL Generation...
Synthesis...
Tech Mapping...
Analog Placement...
Analog Routing...
Analog Code Generation...
Digital Placement...
Digital Routing...
Bitstream Generation...
Bitstream Verification...
Static timing analysis...
API Generation...
Dependency Generation...
Cleanup...
arm-none-eabi-gcc.exe -mcpu=cortex-m0 -mthumb -I. -IGenerated_Source\PSoC4 -Wa,-alh=.\CortexM0\ARM_GCC_541\Debug/main.lst -g -D DEBUG -Wall -ffunction-sections -ffat-lto-objects -O0 -c main.c -o .\CortexM0\ARM_GCC_541\Debug\main.o
main.c: In function 'AD5941_Initialize':
main.c:299:16: warning: format '%d' expects argument of type 'int', but argument 2 has type 'AD5940Err {aka long int}' [-Wformat=]
         printf("[ERROR] AppAMPInit failed with error code: %d\r\n", error);
                ^
main.c:299:16: warning: format '%d' expects argument of type 'int', but argument 2 has type 'AD5940Err {aka long int}' [-Wformat=]
main.c: In function 'DiagnoseFIFO':
main.c:348:12: warning: format '%d' expects argument of type 'int', but argument 2 has type 'long unsigned int' [-Wformat=]
     printf("  FIFO Count: %d\n", fifosta & 0x7FF);
            ^
main.c:348:12: warning: format '%d' expects argument of type 'int', but argument 2 has type 'long unsigned int' [-Wformat=]
main.c: In function 'MeasureTemperature':
main.c:511:20: warning: unused variable 'resistance' [-Wunused-variable]
     float voltage, resistance;
                    ^
main.c:511:11: warning: unused variable 'voltage' [-Wunused-variable]
     float voltage, resistance;
           ^
main.c:510:14: warning: unused variable 'adcCode' [-Wunused-variable]
     uint32_t adcCode;
              ^
main.c: In function 'ReadCurrentFromAD5940':
main.c:570:5: warning: enumeration value 'SENSOR_COUNT' not handled in switch [-Wswitch]
     switch(sensorType)
     ^
main.c: In function 'ReadCurrentFromSourceMeter_Simulated':
main.c:683:34: warning: implicit declaration of function 'rand' [-Wimplicit-function-declaration]
             current_nA = 85.0 + (rand() % 10 - 5);  // 80-90 nA
                                  ^
main.c: In function 'AppCallBack':
main.c:1036:12: warning: unused variable 'i' [-Wunused-variable]
     uint16 i;
            ^
main.c: In function 'main':
main.c:1378:59: error: 'REG_AFE_DATAFIFOCON' undeclared (first use in this function)
                         uint32_t fifocon = AD5940_ReadReg(REG_AFE_DATAFIFOCON);
                                                           ^
main.c:1378:59: note: each undeclared identifier is reported only once for each function it appears in
main.c:1379:59: error: 'REG_AFE_DATAFIFOSTA' undeclared (first use in this function)
                         uint32_t fifosta = AD5940_ReadReg(REG_AFE_DATAFIFOSTA);
                                                           ^
main.c: At top level:
main.c:1080:13: warning: 'LowPowerImplementation' defined but not used [-Wunused-function]
 static void LowPowerImplementation(void)
             ^
The command 'arm-none-eabi-gcc.exe' failed with exit code '1'.
--------------- Rebuild Failed: 02/04/2026 17:22:06 ---------------
